Bug 69444 - .UI Widget based Thumbnail Viewer in Start center and Template Manager - crashing with keyboard cursor navigation
Summary: .UI Widget based Thumbnail Viewer in Start center and Template Manager - cras...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-16 22:31 UTC by V Stuart Foote
Modified: 2013-09-21 18:32 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2013-09-16 22:31:27 UTC
LO Dev will consistently crash in Start Center when navigating with keyboard into the Thumbnail View frame/panel and exiting the thumbnail view with cursor keys. And while exiting with <Tab> keys does not crash but probably incorrectly lands back on "Open" button.  Possibly a muddled parent/child role definition?

on Windows 7 sp1 64bit
Version: 4.2.0.0.alpha0+
Build ID: bd8f84ceb36954496fd9f053436b0c4a8a5c38db
TinderBox: Win-x86@39, Branch:master, Time: 2013-09-16_00:22:32


Steps to reproduce:

1. open Libre Office
2. <f6> to land on Open button
3. <tab> through selections and stop on the "All recent" tab
4. <tab> to drop onto the "New document" tab
5. <cursor> <R,D> to move forward <cursor> <L,U> backward on new document tab controls
6. <cursor> <R,D> from "New formula" tab onto thumbnail view frame/panel
7. a <TAB> will exit to the "Open" button--but a <cursor><R,L,U,D> will crash LO Dev with restart recovery.
Comment 1 retired 2013-09-17 08:50:55 UTC
Can't confirm on OS X 10.8.5 and LO Version: 4.2.0.0.alpha0+
Build ID: f4d3954fc6106b3ae0ee16ab0fcde15d8cb945e3.

LO does not crash but still behaves strange when trying to navigate with tab + arrow keys. I can tap through the options until I arrive at the document selection but then I can not navigate with the arrow keys.

So different but yet incorrect behavior on OS X.
Comment 2 Alex Thurgood 2013-09-17 09:12:16 UTC
@Stuart : have you got a backtrace handy ? I would like to compare it to the one I'm seeing on OSX in the Base Query Designer in bug 69162
Comment 3 V Stuart Foote 2013-09-17 13:23:51 UTC
Crash occurs when no document is present and ANY cursor key <L,D,U,R> is pressed when positioned in the thumbnail view panel.

But if in thumbnail view panel and at least one document is present, the cursor <L,R> will move between documents (or stay on the single document).  But a cursor <D,U> will crash LODev, with recovery restart. No issues with <TAB> movement. Just cursor movements.

Last symbols build on debug version from 3 Sep so will have to reload and reconfigure, so unable to stack trace at the moment.  

Also, and can't test at the moment on Linux as no daily 64-bit Linux TBs processing.
Comment 4 V Stuart Foote 2013-09-17 21:58:36 UTC
Caolán, Kendy, Krisztian

So the .UI Widgets are shaping up nicely.  However, the issue with keyboard navigation seems to need some attention.

Just found that this crash is not limited to Thumbnail Viewer in Start Center, but also affects the Thumbnail Viewer of .UI Widget based Template Manager.

In addition to crashing of Start Center --> Thumbnail Viewer as in comment 1, when navigating with <TAB> and Cursor keys as listed.  Seems that Template Manager will also crash with cursor key navigation.

Steps to recreate:

1. Launch LODev 4.2.0alpha+
2. Select Template Manager button
3. <TAB> to land on the Documents - Page Tab, of the page tab list
4. Cursor <R,D> to cycle to the Presentations - Page Tab, of the page tab list
4. <TAB> to cycle to the ThumnailView - list on the thumbnail panel
5. Cursor <R,L, or U> to toggle between the My Templates & Presentation Background list.
6. From either list, Cursor key <D> will crash LODev with restart recovery.

Verified behavior is not only on the Presentation - Page Tab, but also all four of the Page Tabs -- Documents, Spreadsheets, Presentations and Drawings all will crash from the ThumbnailView with the Cursor <D> key navigation.
Comment 5 Commit Notification 2013-09-18 11:40:31 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=033d37baafe02fd9cfadab810742fcfccfbed3a9

Related: fdo#69444 unsigned arithmetic is a PITA



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2013-09-18 11:42:32 UTC
the above commit fixes down-arrow crashing things
Comment 7 Commit Notification 2013-09-18 12:01:25 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e90982f5962968a0f334d232b3be54fcdb736e1d

Resolves: fdo#69444 cursor keys don't move between recent used docs



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2013-09-18 12:04:00 UTC
and the above should make cursor arrows actually do something in the recently used docs view. If there turn out to be additional problems could you open new bugs for those.
Comment 9 V Stuart Foote 2013-09-20 00:39:36 UTC
@Caolán,

(In reply to comment #5)
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=033d37baafe02fd9cfadab810742fcfccfbed3a9
> 
> Related: fdo#69444 unsigned arithmetic is a PITA
> 

Still not quite right... will crash recover with ANY cursor key movement in Start Center's Thumbnail View when no recent documents are present in the list.

The thumbnail view navigation in Template Manager will also crash on empty Thumbnail View lists. But once navigated onto the "Presentations" page tab, and moving to its populated Thumbnail View list--cursor movement is safe there and strangely on the empty thumbnail view lists of the other page tabs (Documents, Spreadsheets, Drawings).


Version: 4.2.0.0.alpha0+
Build ID: 25006b42e09e1df52f733aaefa51937e07cd7c38
TinderBox: Win-x86@39, Branch:master, Time: 2013-09-19_08:51:58

Steps to reproduce:

1. Clean /A admin install.
2. initial launch and configure Java JRE and the Support Assistive technologies.
3. re-launch LOdev, the Start center is clear with no recent documents in view.
4. <F6> onto "Open" button of the "All recent" Page Tab panel.
5. <Tab> across the buttons and into the Thumbnail View list, nothing listed so no visual queue (but I'm following Focus events in JavaFerret-32). 
6. entry of any cursor key <R,D,L,U> causes crash-restart recovery.
Comment 10 Commit Notification 2013-09-20 19:25:40 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3e4604b4642f6495d6e3f6a1317b1ab52eb4b569

Related: fdo#69444 additionally care from zero recently-used items case



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2013-09-20 19:27:16 UTC
additional 0 len case fixed now too
Comment 12 V Stuart Foote 2013-09-21 18:32:25 UTC
Confirming that the crash on empty thumbnail view list is fixed...

Version: 4.2.0.0.alpha0+
Build ID: 8c0687f2d23ef8b5e55977968720ee93282de798
TinderBox: Win-x86@39, Branch:master, Time: 2013-09-21_09:08:47