Related: fdo#69444 unsigned arithmetic is a PITA

Change-Id: I8662fc36476a2a029f6bab306306181359b3f688